rework changelock. Add implementation clientUser/create endpoint
